# oncorounds

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
cases/: README.md  case-001.json  case-002.json  case-003.json  case-004.json  case-005.json  case-006.json  case-007.json  case-008.json  case-009.json  case-010.json  case-011.json  case-012.json  case-013.json  case-014.json  case-015.json  case-016.json  case-017.json  case-018.json  case-019.json  case-020.json
docs/: architecture.md  getting-started.md  index.md
docs/leaderboard/: data.json  index.html  index.md
docs/reference/: prompts.md  schemas.md
docs/usage/: llm-clients.md  running-benchmark.md
examples/: config.json  run_benchmark.py
logs/Kimi-K2-Thinking/: Kimi-K2-Thinking-case001-conversation.jsonl  Kimi-K2-Thinking-case002-conversation.jsonl  Kimi-K2-Thinking-case003-conversation.jsonl  Kimi-K2-Thinking-case004-conversation.jsonl  Kimi-K2-Thinking-case005-conversation.jsonl  Kimi-K2-Thinking-case006-conversation.jsonl  Kimi-K2-Thinking-case007-conversation.jsonl  Kimi-K2-Thinking-case008-conversation.jsonl  Kimi-K2-Thinking-case009-conversation.jsonl  Kimi-K2-Thinking-case010-conversation.jsonl  Kimi-K2-Thinking-case011-conversation.jsonl  Kimi-K2-Thinking-case012-conversation.jsonl  Kimi-K2-Thinking-case013-conversation.jsonl  Kimi-K2-Thinking-case014-conversation.jsonl  Kimi-K2-Thinking-case015-conversation.jsonl  Kimi-K2-Thinking-case016-conversation.jsonl  Kimi-K2-Thinking-case017-conversation.jsonl  Kimi-K2-Thinking-case018-conversation.jsonl  Kimi-K2-Thinking-case019-conversation.jsonl  Kimi-K2-Thinking-case020-conversation.jsonl  (+1 more)
oncorounds/: __init__.py  benchmark.py  case.py  clients.py  errors.py  prompts.py  schemas.py  scoring.py
prompts/: candidate-instructions.md  judge-instructions.md  parser-instructions.md
schemas/: candidate-output.json  case.json  judge-output.json  parser-input.json  parser-output.json
tests/: __init__.py  conftest.py  test_benchmark.py  test_case_loader.py  test_integration_openai.py  test_integration_scripted.py  test_schemas.py  test_scoring.py  test_utils.py  testcase.json
(+1280 files in other folders)
